[package]
name = "btreedb"
version = "0.1.0"
authors = [
  "Mike Belopuhov <mike@belopuhov.com>",
  "Dan Burkert <dan@danburkert.com>"
]
license = "Apache-2.0"

description = "Append-only B+Tree database"
repository = "https://github.com/mbelop/btreedb.git"
keywords = ["btreedb", "b+tree", "database", "storage-engine", "library"]
categories = ["database"]

[workspace]
members = [
  "btree",
]

[dependencies]
btree = { path = "btree" }
bitflags = "1"
errno = "0.2"
libc = "0.2"

[dev-dependencies]
tempdir = "0.3"
